# petaurista

./: Cargo.toml  README.md
core/libxdm/: Cargo.toml
core/libxdm/src/: lib.rs  node_collection.rs  nodes.rs  xpath.rs
nif/fun_stuff/: Cargo.toml
nif/fun_stuff/src/: main.rs
nif/nif_2/: Cargo.toml
nif/xqerl_datetime_nif/: Cargo.toml
nif/xqerl_datetime_nif/src/: date_time.rs  lib.rs
nif/xqldb_mem_nodes_nif/: Cargo.toml
nif/xqldb_mem_nodes_nif/src/: collection_builder.rs  event.rs  lib.rs  xmerl_sax.rs  xml_rs_bridge.rs
