[package]
name = "xqerl_datetime_nif"
version = "0.1.0"
authors = ["Zachary Dean <contact@zadean.com>"]
edition = "2018"

[lib]
name = "xqerl_datetime_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libxdm = { path = "../../core/libxdm" }
