[package]
name = "xqldb_mem_nodes_nif"
version = "0.1.0"
authors = ["Zachary Dean <contact@zadean.com>"]
edition = "2018"

[lib]
name = "xqldb_mem_nodes_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libxdm = { path = "../../core/libxdm" }
rustler = "0.21"
# RustyXML = "0.3.0"
xml-rs = "0.8.3"